--- a/app/css/student.module.css
+++ b/app/css/student.module.css
@@ -148,7 +148,7 @@
 
 @media (min-width: 701px) and (max-width: 1340px) {
     .student{
-        padding: var(--space-2xl);
+        padding: var(--space-3xl);
         gap: var(--space-2xl);
     }
 
