--- a/app/css/tools.module.css
+++ b/app/css/tools.module.css
@@ -35,7 +35,8 @@
 }
 
 .heading{
-    width: 1280px;
+    max-width: 1280px;
+    width: 100%;
     height: 62px;
     font-weight: 800;
     font-size: var(--text-4xl);
